Membuat Popup untuk add list dalam todo list. Popup masih ngebug sehingga belom tampil ketika klik button add, pliss help me

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #7AB2D3;
+  background-color: #7ab2d3;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -356,7 +356,7 @@ nav .right ul li:active::after {
   justify-content: space-between;
   align-items: center;
   padding: 10px 0;
-  border-top: 2px solid #DFF2EB;
+  border-top: 2px solid #dff2eb;
 }
 
 .containerTodo:first-child {
@@ -386,13 +386,13 @@ nav .right ul li:active::after {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   transform: translateX(-100%);
   transition: transform 0.3s ease;
 }
 
 .containerTodo input[type="checkbox"]:checked {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   justify-content: flex-end;
 }
 
@@ -441,7 +441,7 @@ nav .right ul li:active::after {
   width: 80px;
   height: 45px;
   border-radius: 8px;
-  background: linear-gradient(145deg, #4CAF50, #45a049);
+  background: linear-gradient(145deg, #4caf50, #45a049);
   border: none;
   color: white;
   font-size: 24px;
@@ -488,7 +488,7 @@ nav .right ul li:active::after {
 }
 
 .add-button::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 100%;
@@ -504,7 +504,7 @@ nav .right ul li:active::after {
 }
 
 .add-button::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 100%;
@@ -562,8 +562,7 @@ nav .right ul li:active::after {
   }
 
   100% {
-    transform: translate(calc(cos(var(--angle)) * 70px),
-        calc(sin(var(--angle)) * 70px)) scale(1);
+    transform: translate(calc(cos(var(--angle)) * 70px), calc(sin(var(--angle)) * 70px)) scale(1);
     opacity: 0;
   }
 }
@@ -583,3 +582,42 @@ nav .right ul li:active::after {
 .add-button {
   animation: slideIn 0.5s ease-out forwards, pulse 2s infinite 0.5s;
 }
+
+.box-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.box-popup.show {
+  display: flex;
+}
+
+.show-popup {
+  padding: 10px;
+  border-radius: 14px;
+  background-color: #fff;
+}
+
+.inputTodo-list {
+  padding: 4px;
+  margin-bottom: 4px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  background-color: rgb(230, 225, 219);
+  color: black;
+}
+
+.todo-button {
+  background-color: #46a44b;
+  padding: 4px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+} 
