--- a/notification.css
+++ b/notification.css
@@ -7,11 +7,22 @@
   box-shadow: 0px 6px 7px black;
   transition: all 0.5s ease;
   color: black;
+  transition: transform .5s cubic-bezier(.24, .13, .39, 1.69);
+  transform: translatey(0px);
+  max-width: 300px;
+  max-height: 200px;
+  overflow: scroll;
+}
+
+.todo-notification.close {
+  transition: transform .5s cubic-bezier(.65, -0.52, .38, .12);
+  transform: translatey(500px)
 }
 
 .todo-notification .todo-notification-header {
   display: flex;
   justify-content: space-between;
+  gap: 30px;
 }
 
 .todo-notification p {
@@ -39,6 +50,10 @@
 .todo-notification-buttons button {
   width: 70px;
   height: 30px;
+}
+
+.hide {
+  display: none;
 }
 
 .primary-button {
