--- a/notification.css
+++ b/notification.css
@@ -54,6 +54,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
+  text-wrap: nowrap;
 }
 
 .todo-notification-header h3 {
