--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   cursor: default;
 }
 
+
 nav {
   background-color: #0b9519;
   padding: 20px 40px;
@@ -366,10 +367,68 @@ nav .right ul li:active::after {
   align-items: center;
   padding: 10px 0;
   border-top: 2px solid #dff2eb;
+  transition: padding-left 0.3s ease, padding-right 0.6s cubic-bezier(0.645, 0.045, 0.355, 1), background-color 0.3s ease
+}
+
+.todo-input {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+
+}
+
+.todo-input button {
+  color: black;
+  transform: translateX(200px);
+  transition: transform 0.6s cubic-bezier(.44, -0.3, .79, .71);
+}
+
+.containerTodo.deadline {
+  background-color: #e74c3c;
+  color: #ffffff;
+  border-radius: 8px;
+  padding: 15px;
+  transition: padding 0.3s ease, background-color 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  font-family: 'Arial', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+.containerTodo.deadline:hover {
+  background-color: #c0392b;
+  padding: 18px;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+
+.containerTodo.deadline input[type="checkbox"] {
+  background-color: #b5b5b5;
+  border-radius: 6px;
 }
 
 .containerTodo:first-child {
   border-top: none;
+}
+
+.containerTodo:hover {
+  background-color: rgba(184, 207, 245, 0.4);
+  padding-left: 5px;
+  padding-right: 15px;
+
+}
+
+.containerTodo:hover .todo-input button,
+input[type="checkbox"] {
+  transform: translateX(0);
+  transition: transform 0.4s cubic-bezier(.55, -0.14, 0, 1.7);
+}
+
+.todo-input button {
+  width: 80px;
+  height: 30px;
+  font-weight: bold;
+  color: white;
 }
 
 .containerTodo input[type="checkbox"] {
@@ -386,6 +445,15 @@ nav .right ul li:active::after {
   transition: background-color 0.3s ease, justify-content 0.3s ease;
   position: relative;
   overflow: hidden;
+  transform: translateX(80px);
+  transition: transform 0.2s ease;
+  transition-delay: 0.6s;
+}
+
+.containerTodo:hover .todo-input button,
+.containerTodo:hover .todo-input input[type="checkbox"] {
+  transform: translateX(0);
+  transition: transform 0.4s cubic-bezier(.83, -0.29, .79, .71);
 }
 
 .containerTodo input[type="checkbox"]::before {
